# sawmill

./: .buildinfo  CONTRIBUTING.md  LICENSE  README.md  building.html  genindex.html  index.html  introduction.html  meson.build  meson_options.txt  objects.inv  plugins.html  search.html  searchindex.js
.doctrees/: building.doctree  environment.pickle  index.doctree  introduction.doctree  plugins.doctree
.doctrees/api/: index.doctree
.doctrees/api/collector/: index.doctree
.doctrees/api/event/: index.doctree
.doctrees/api/slice/: index.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docs.yml  build-linux.yml  build-macos.yml  build-windows.yml
api/: index.html
api/collector/: index.html
api/event/: index.html
api/slice/: index.html
docs/: building.md  conf.py  index.md  introduction.md  meson.build  plugins.md
docs/api/: index.md
docs/api/collector/: index.md
docs/api/event/: index.md
docs/api/slice/: index.md
examples/: meson.build
src/: config.hh.in  meson.build
src/sawmill/: collect.cc  collect.hh  event.hh  internal.hh  meson.build  metadata.hh  registry.cc  registry.hh  sawmill.hh  slice.hh
src/sawmill-collectors/: meson.build
src/sawmill-collectors/file/: meson.build
src/sawmill-collectors/journald/: meson.build
src/sawmill-collectors/log/: meson.build
src/sawmill-plugins/: clang.cc  meson.build
src/sawmill-plugins/clang/: meson.build  plugin.cc
src/sawmill-plugins/gcc/: meson.build  plugin.cc
tests/: meson.build  metadata.cc
