option(
	'bugreport_url',
	type: 'string',
	value: 'https://github.com/lethalbit/clank/issues',
	description: 'URL for bug report submissions'
)

option(
	'build_collectors',
	type: 'boolean',
	value: true,
	description: 'Build the builtin sawmill collectors'
)

option(
	'collectors',
	type: 'array',
	choices: ['file', 'journald', 'log'],
	description: 'Sawmill collectors to build'
)

option(
	'build_tests',
	type: 'boolean',
	value: true,
	description: 'Build the library with tests'
)

option(
	'build_examples',
	type: 'boolean',
	value: true,
	description: 'Build the library with examples'
)

option(
	'install_examples',
	type: 'boolean',
	value: true,
	description: 'Install example sources into $PREFIX/share/sawmill/examples'
)

option(
	'build_compiler_plugins',
	type: 'boolean',
	value: true,
	description: 'Build compiler plugins for sawmill instrumentation attribute support'
)

option(
	'plugin_gcc',
	type: 'boolean',
	value: true,
	description: 'Build GCC plugin'
)

option(
	'plugin_clang',
	type: 'boolean',
	value: true,
	description: 'Build Clang plugin'
)
